--- a/src/body/services/services.css
+++ b/src/body/services/services.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-self: center;
     /* border: solid blue; */
     padding-inline-end: 40px;
 }
@@ -27,5 +28,12 @@
 }
 
 .servImg {
+    padding-top: 15px;
+    border-radius: 15%;
     width: 80%;
+}
+
+.servHeading {
+    padding: 0;
+    color: aliceblue
 }
