--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -32,22 +32,19 @@
 
 #logoCont{
     width: 33%;
+    padding-left: 10%;
     display: flex;
+    position: relative;
+    justify-content: center;
     
 }
 #logo {
-    position: fixed;
-    max-width: 25vmin;
-    top: -80px;
-    left: 60px;
+    position: absolute;
+    padding-top: 10px;
+    width: 150px;
+    overflow: visible;
+    
 }
-
-@media (max-width: 768px) {
-    #logo {
-      max-width: 20vmin;
-      top: 5px;
-    }
-  }
 
 #headright {
   display: flex;
@@ -61,9 +58,43 @@
   margin: 0 auto;
 }
 #navCont{
-    width: 66%;
+    width: 88.5%;
     display: flex;
     justify-content: flex-end;
-    padding-right: 4rem;
-    align-items: flex-end;
+}
+
+/* Small devices (phones) */
+@media (max-width: 576px) {
+  #logo {
+    padding-top: 45px;
+    width: 80px;
+  }
+  #title {    
+    margin-top: 3vh;
+    font-size: 1.1rem;
+  } 
+}
+
+/* Medium devices (tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+  #logo {
+    padding-top: 37.5px;
+    width: 100px;
+  }
+  #title {    
+    margin-top: 3vh;
+    font-size: 1.35rem;
+  } 
+}
+
+/* Large devices (desktops) */
+@media (min-width: 769px) and (max-width: 992px) {
+  #logo {
+    padding-top: 20px;
+    width: 130px;    
+  }
+  #title {    
+    margin-top: 3.5vh;
+    font-size: 1.65rem;
+  } 
 }
