--- a/src/header/navigation/navigation.css
+++ b/src/header/navigation/navigation.css
@@ -16,88 +16,21 @@
 .navImg{
     display: none;
 }
-/*
 
-
-.navItem {
-    display: flex;
-    border: solid green;
-}
-
-.navItem a {
-    color: rgba(186, 156, 220, 0.5);
-    text-decoration: none;
-}
-
-.navImg {
-    opacity: 0;
-    transform: scale(0.2);
-    transform-origin: top left;
-    transition: opacity .45s ease, transform 0.35s ease;
-    z-index: 3;
-    padding: 2px;
-    background-color: rgba(29, 2, 59, 0.85);
-    position: absolute;
-    margin-left: 25px;
-    margin-top: 11px;
-    text-align: left;
-    width: 300px;
-    height: auto;
-}
-
-.navItem:hover .navImg {
-    opacity: 0;
-    transform: scale(1);
-}
-
-@media only screen and (max-width: 675px) {
-        
+/* Small devices (phones) */
+@media (max-width: 576px) {
+    /* CSS rules for small devices here */
+  }
+  
+  /* Medium devices (tablets) */
+  @media (min-width: 577px) and (max-width: 768px) {
+    /* CSS rules for medium devices here */
+  }
+  
+  /* Large devices (desktops) */
+  @media (min-width: 769px) and (max-width: 992px) {
+    /* CSS rules for large devices here */
     #navList {
-        max-width: 100%;
-        margin: 0 auto;
-        display: flex;
-        margin:0 auto;
-        padding:0;
+        margin: 5px;
     }
-
-    .navItem {
-        width:50%;
-        height: 45px;
-        padding: 0;
-        margin: 0;
-        border-top: rgba(254, 197, 24, 0.95) solid .5px;
-        border-left: rgba(254, 197, 24, 0.95) solid .5px;;
-        border-top-left-radius: 25%;
-        background: linear-gradient(160deg, rgba(222, 167, 0, 0.95), rgba(169, 127, 1, 0.966));
-        box-shadow: 3px 6px 5px rgba(2, 69, 2, 0.514)
-    }
-
-    .navItem a {
-        color: rgba(29, 2, 59, 0.5);
-        margin: 0 auto;
-        text-decoration: none;
-        font-weight: bold;
-        text-shadow: 1px 1px 1px rgb(124, 150, 43); 
-    }
-
-    .navImg {
-        opacity: 0;
-        transform: scale(0.2);
-        transform-origin: top right;
-        transition: opacity .45s ease, transform 0.35s ease;
-        z-index: 3;
-        padding: 2px;
-        background-color: rgba(29, 2, 59, 0.85);
-        position: absolute;
-        margin-right: 25px;
-        margin-top: 11px;
-        text-align: left;
-        width: 50px;
-        height: auto;
-    }
-
-    .navItem:hover .navImg {
-        opacity: 1;
-        transform: scale(1);
-    }
-} */
+  }
