--- a/src/servPage/servPage.css
+++ b/src/servPage/servPage.css
@@ -7,16 +7,14 @@
 }
 
 #servHead {
-    padding-top: 3.5rem;
     padding-bottom: 2.5rem;
-    text-align: left;
-    margin-left: 45px;
 }
 
 .servText {
     margin-bottom: 40px;
     position: relative;
     max-width: 1000px;
+    height: 9.75vh;
     padding: 10px;
     margin: 0 auto;
 }
@@ -33,21 +31,9 @@
     height: 2px;
     background: linear-gradient(to right, transparent, rgba(203, 229, 245, 0.75), transparent);
 }
-.servText::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 110%;
-    right: 10%;
-    left: 10%;
-    bottom: 10%;
-    width: 80%;
-    height: 2px;
-    background: linear-gradient(to right, transparent, rgba(203, 229, 245, 0.75), transparent);
-}
 
 #coreServ {
-    margin-top: 60px;
+    margin-top: 120px;
 }
 
 #servCont {
@@ -58,18 +44,50 @@
     height: auto;
 }
 .servSub {
-    width: 40%;
+    width: 300px;
     background-color: rgba(240, 248, 255, 0.724);
     border-radius: 15px;
     border: solid 4.5px rgb(16, 15, 20);
     box-shadow: 0 5px 5px 2.5px rgb(52, 46, 64);
 }
 .coreServ {
-    text-align: left;
-    padding-left: 7.5%;
+    text-align: center;
 }
 .servList {
-    list-style: none;
+    list-style:inside ;
     margin: 5%;
-    padding-inline-start: 0;
+    padding-inline-start: 10px;
+    text-align: left;;
+}
+
+@media (max-width: 576px) {
+    /* CSS rules for small devices here */
+  }
+  
+/* Medium devices (tablets) */
+@media (min-width: 577px) and (max-width: 768px) {
+    #servCont {
+        display: flex;
+        justify-content: space-evenly;
+        margin: 40px auto 20px;
+        width: 100%;
+        height: auto;
+    }
+    #coreServ{
+        margin-top: 150px;
+    }
+    .coreServ {
+        text-align: center;
+    }
+    .servList {
+        list-style:inside ;
+        margin: 5%;
+        padding-inline-start: 10px;
+        text-align: left;;
+    }
+}
+  
+/* Large devices (desktops) */
+@media (min-width: 769px) and (max-width: 992px) {
+     
 }
