adding additional break points to enhance performance

--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@
 
 @media (max-width: 576px) {
   .head2 {
-    padding-bottom: 6.5rem;
-    padding-top: .25rem;
+    padding-bottom: 2.5rem;
+    padding-top: 1.75rem;
   }
 }
 
