--- a/src/body/services/services.css
+++ b/src/body/services/services.css
@@ -33,11 +33,27 @@
 
 /* Small devices (phones) */
 @media (max-width: 576px) {
-    /* CSS rules for small devices here */
+    #servList {
+        padding: 0;
+        margin-top: -75px;
+        flex-direction: column;
+    }
+    #servList > .servItem {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        padding: 0;
+        height: auto;
+    }
+    .servImg {
+        padding-top: 15px;
+        border-radius: 35px;
+        width: 50%;
+    }
   }
   
 /* Medium devices (tablets) */
-@media (max-width: 768px) {
+@media (min-width: 577px) and (max-width: 768px) {
 
     #servList {
         display: flex;
