--- a/src/header/navigation/navigation.css
+++ b/src/header/navigation/navigation.css
@@ -19,7 +19,9 @@
 
 /* Small devices (phones) */
 @media (max-width: 576px) {
-    /* CSS rules for small devices here */
+    #navList {
+        margin-top: 0px;
+    }
   }
   
   /* Medium devices (tablets) */
