--- a/src/servPage/servPage.css
+++ b/src/servPage/servPage.css
@@ -11,11 +11,9 @@
 }
 
 .servText {
-    margin-bottom: 40px;
     position: relative;
-    max-width: 1000px;
-    height: 9.75vh;
-    padding: 10px;
+    max-width: 80%;
+    height: auto;
     margin: 0 auto;
 }
 
@@ -33,7 +31,7 @@
 }
 
 #coreServ {
-    margin-top: 120px;
+    margin-top: 0px;
 }
 
 #servCont {
@@ -60,7 +58,19 @@
     text-align: left;;
 }
 @media (max-width: 576px) {
-    /* CSS rules for small devices here */
+    #coreServ{
+        margin-top: 20px;
+        margin-bottom: 60px;
+    }
+    .servSub {
+        margin-top: 0px;
+    }
+    #servCont {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 310px;
+    }
   }
   
 /* Medium devices (tablets) */
