--- a/src/body/body.css
+++ b/src/body/body.css
@@ -6,13 +6,15 @@
     min-height: 100%;
     padding: 30px 0;
     z-index: -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .bodCont {
-    height: auto;
     border-radius: 15px;
-    position: relative;
-    overflow: hidden;  
+    margin: 10px 0;
     animation: glow 2s ease-in forwards, tv-on 1.5s ease-in-out forwards;
 }
 
@@ -30,58 +32,57 @@
 } 
 @keyframes tv-on {
     0% {
-        width: 0;
-        height: 0;
+        width: 0%;
+        height: 0%;
         opacity: 0;
         transform-origin: center center;
         transform: scaleY(0);
         border-radius: 100px;
         filter: blur(20px);
         background-color: rgba(195, 196, 197, 0.1);
-        top: 50%;
+        top: 0%;
         left: 50%;
-        transform: translate(-50%, -50%);
     }
     50%{
         width: 400px;
-        height: 5px;
+        height: 25%;
         opacity: .5;
         transform-origin: center center;
         transform: scaleY(1);
         border-radius: 100px;
         filter: blur(20px);
         background-color: rgba(195, 196, 197, 0.27);
-        top: 50%;
+        top: 25%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        /* transform: translate(-50%, -50%); */
     }
     100% {
         width:80%;
-        height: 120px;
+        height: 100%;
         opacity: 1;
         transform-origin: center center;
         transform: scaleY(1);
         background-color: rgba(195, 196, 197, 0.517);
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);    
+        /* transform: translate(-50%, -50%);     */
     }
 }
 
 /* Small devices (phones) */
 @media (max-width: 576px) {
     .Body{
-        max-width: 90%;
+        max-width: 100%;
         margin: 100px auto;
         min-height: 100%;
         padding: 5px 0;
         z-index: -1;
     }
     .bodCont {
-        width: 300px;
+        width: 90%;
         margin-top: 60px;
-        padding-bottom: 50px;
-
+        padding: 5px;
+        margin-bottom: 20px;
     }
     
 }
@@ -105,11 +106,12 @@
     .Body{
         max-width: 90%;
         margin: 100px auto;
-        min-height: 100%;
         padding: 5px 0;
         z-index: -1;
     }
     .bodCont {
-        margin-bottom: -25px;
+        margin-top: 50px;
+        margin-bottom: -50px;
+        height: 2000px;
     }
 }
