--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -9,7 +9,7 @@
     right: 0;
     display: flex;
     justify-content: space-between;
-    height: 100px;
+    height: 110px;
     background: linear-gradient(to bottom, #bfbece, #e9ebf2);
     box-shadow: 0 4px 6px rgba(140, 132, 154, 0.934);
     animation: shadow-pulse 2s ease-in-out infinite alternate;
@@ -26,65 +26,114 @@
   }
 
 .container {
-    display: flex;
-    /* border: solid red;     */
+    display: flex;    
 }
 
 #logoCont{
     width: 33%;
-    padding-left: 10%;
     display: flex;
     position: relative;
-    justify-content: center;
-    
+    justify-content: center;    
 }
 #logo {
     position: absolute;
-    padding-top: 10px;
+    padding-top: 40px;
     width: 150px;
     overflow: visible;
-    
+    filter: drop-shadow(0 -2px 5px rgba(0, 0, 0, 0.5));
 }
 
 #headright {
   display: flex;
   width: 100%;
   flex-direction: column;
+  align-items: center;
 }
+
 #titleCont{
   width: 100%;
 }
+
 #title{
   margin: 0 auto;
-}
-#navCont{
-    width: 88.5%;
-    display: flex;
-    justify-content: flex-end;
+  margin-top: 1vh;
+  font-size: 3rem;
 }
 
-/* Small devices (phones) */
-@media (max-width: 576px) {
+#navCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 494px) {
+  #App-header {
+    flex-direction: column;
+    height: 20vh;
+  }
+}
+
+/* Legacy Devices small smartphones */
+@media (max-width:495px) {
+  #App-header {
+    height: 62.5px;
+  }
   #logo {
-    padding-top: 60px;
+    padding-top: 20px;
     width: 80px;
   }
   #title {    
-    margin-top: 3vh;
-    font-size: 1.1rem;
+    margin-top: 10px;
+    font-size: 1.2rem;
   } 
+  #navCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-inline-start: 0;
+  }
+}
+
+/* Small devices (phones) */
+@media (min-width: 495px) and (max-width: 576px) {
+  #App-header {
+    height: 62.5px;
+  }
+  #logo {
+    padding-top: 20px;
+    width: 80px;
+  }
+  #title {    
+    margin-top: 10px;
+    font-size: 1.2rem;
+  } 
+  #navCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-inline-start: 0;
+  }
 }
 
 /* Medium devices (tablets) */
 @media (min-width: 577px) and (max-width: 768px) {
+  #App-header {
+    height: 85px;
+  }
   #logo {
     padding-top: 37.5px;
     width: 100px;
   }
   #title {    
-    margin-top: 3vh;
+    margin-top: 1vh;
     font-size: 1.35rem;
   } 
+  #navCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-inline-start: 70px;
+  }
 }
 
 /* Large devices (desktops) */
@@ -94,7 +143,13 @@
     width: 130px;    
   }
   #title {    
-    margin-top: 3.5vh;
+    margin-top: 2vh;
     font-size: 1.65rem;
   } 
+  #navCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-inline-start: 120px;
+  }
 }
