--- a/src/body/body.css
+++ b/src/body/body.css
@@ -78,12 +78,16 @@
         padding: 5px 0;
         z-index: -1;
     }
+    .head2 {
+        display: none;
+    }
     .bodCont {
         width: 90%;
-        margin-top: 10px;
+        margin-top: 100px;
         padding: 5px;
-        margin-bottom: 40px;
+        margin-bottom: 10px;
     }
+    
     #am p{
         font-size: 1.1rem;
     }
