--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -78,7 +78,7 @@
     justify-content: center;
   }
   #logo {
-    padding-top: 20px;
+    padding: 20px 0;
     width: 100px;
   }
   #title {    
