--- a/src/body/portPage/portfolio.css
+++ b/src/body/portPage/portfolio.css
@@ -1,3 +1,11 @@
+/* Apply box-sizing to all elements */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    max-width: 100vw;
+}
+
 .portCont {
     display: flex;
     flex-direction: column;
@@ -76,3 +84,45 @@
     font-size: 16px;
     font-weight: 100;
 }
+
+/* Legacy Devices small smartphones */
+@media (max-width:494px) {
+    .portCont {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 200px 5px 0;
+        padding: 0;
+    }
+    #portList {
+        padding-inline-start: 0;
+    }
+    #portList li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 80vw;
+        padding: 0;
+        height: auto;
+    }
+    .portImg {
+        max-width: 100%;
+        height: auto;
+    }
+  }
+  
+  /* Small devices (phones) */
+  @media (min-width: 495px) and (max-width: 576px) {
+    
+  }
+  
+  /* Medium devices (tablets) */
+  @media (min-width: 577px) and (max-width: 768px) {
+    
+  }
+  
+  /* Large devices (desktops) */
+  @media (min-width: 769px) and (max-width: 992px) {
+    
+  }
