--- a/src/body/servPage/servPage.css
+++ b/src/body/servPage/servPage.css
@@ -72,6 +72,30 @@
         height: 310px;
     }
   }
+
+/* Legacy Devices (Small Smartphones) */
+@media (max-width: 494px) {
+    
+    .servBody {
+        margin: 200px 5px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        max-width: 100vw;
+    }
+    #coreServ{
+        margin: 20px;
+    }
+    #servCont {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 20px;
+        width: 100%;
+        height: auto;
+    }
+}
   
 /* Medium devices (tablets) */
 @media (min-width: 577px) and (max-width: 768px) {
@@ -81,6 +105,7 @@
         margin: 40px auto 20px;
         width: 100%;
         height: auto;
+        border: solid blue 1px;
     }
     #coreServ{
         margin-top: 150px;
